Fixed color contrast issue

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -105,7 +105,7 @@ nav {
 }
 
 .navigation a span {
-    color: red;
+    color: #71ffff;
 }
 
 .navigation li a:hover {
